# rustsnek-v2

./: .gitignore  Cargo.toml  payload-compressed.json  payload.json
src/: alloc.rs  api.rs  main.rs  snake.rs  stats.rs
src/snake/: api.rs  minmax.rs  mod.rs  tests.rs
src/snake/testdata/: basic_large_player_setup  basic_multi_player_setup  basic_single_player_setup  eats_food  potential_death  trapped_by_another  trapped_game_regression_1  trapped_myself
